# anytensor

./: .gitignore  README.md  pyproject.toml
anytensor/: __init__.py  _torch_specific.py  backends.py  core.py  segment.py  typing.py
test/: test_device.py  test_ops.py  test_torchscript.py
