[tool.poetry]
name = "anytensor"
version = "0.1.0"
description = "A functional tensor package that automatically uses the same backend as the inputs."
authors = ["S. Joshua Swamidass <swamidass@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
einops = ">=0.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
